@startuml

title __ACTIVITY's Class Diagram__\n

  namespace Activity {
    class Activity.DMSuitableFoodActivity {
        ~ imageViews : List<ImageView>
        ~ recyclerViews : List<RecyclerView>
        - flags : int[]
        - foodBeaans : List<DMFoodBeaan>
        {static} + actionStart()
        + iv_back_dm()
        + onClick()
        # onCreate()
        - getdata()
        - setrv()
    }
  }
  

  namespace Activity {
    class Activity.LoginActivity {
        - blurLayout : BlurLayout
        - input_blurLayout : BlurLayout
        - leftArm : ImageView
        - leftHand : ImageView
        - loginBtn : Button
        - passwordEditText : EditText
        - rightArm : ImageView
        - rightHand : ImageView
        - userEditText : EditText
        - userlist : List<UserAccountBean>
        + afterTextChanged()
        + beforeTextChanged()
        + onTextChanged()
        + onTouchEvent()
        # onCreate()
        # onStart()
        # onStop()
        - closeAnimation()
        - jumpToNextActivity()
        - openAnimation()
    }
  }
  

  namespace Activity {
    class Activity.MainActivity {
        ~ bottomNavigationView : BottomNavigationView
        {static} - TAG : String
        # createPresenter()
        # getLayout()
        # initEventAndData()
        # onCreate()
    }
  }
  

  namespace Activity {
    class Activity.SplashActivity {
        ~ mhandler : Handler
        {static} - TAG : String
        # onCreate()
    }
  }
  

  Activity.DMSuitableFoodActivity -up-|> androidx.appcompat.app.AppCompatActivity
  Activity.DMSuitableFoodActivity o-- Adapter.DMFruitRVAdapter : adapter
  Activity.DMSuitableFoodActivity o-- Adapter.DMFruitRVAdapter : condimentadapter
  Activity.DMSuitableFoodActivity o-- Adapter.DMFruitRVAdapter : dryFruitadapter
  Activity.DMSuitableFoodActivity o-- Adapter.DMFruitRVAdapter : grainadapter
  Activity.DMSuitableFoodActivity o-- Adapter.DMFruitRVAdapter : meatadapter
  Activity.DMSuitableFoodActivity o-- Adapter.DMFruitRVAdapter : vegetableadapter
  Activity.LoginActivity .up.|> android.text.TextWatcher
  Activity.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  Activity.LoginActivity o-- Base.DataManager : dataManager
  Activity.MainActivity .up.|> Contract.MainContract.MainView
  Activity.MainActivity -up-|> Base.BaseActivity
  Activity.SplashActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
